# XRG

./: .gitignore  AI_OBSERVABILITY_ARCHITECTURE.md  AI_TOKEN_IMPLEMENTATION.md  AI_TOKEN_UNIVERSAL_COMPLETE.md  AI_TOKEN_VERIFICATION.md  CLAUDE.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  FIX_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  LINUX_PORT_COMPLETE.md  LINUX_PORT_STRATEGY.md  LIVE_TRACKING_COMPLETE.md  MACOS_AITOKEN_PORT_GUIDE.md  NATIVE_OTEL_SETUP.md  OTEL_DEPLOYMENT_COMPLETE.md  PERFORMANCE_FIX_APPLIED.md  QUICK_START_AI_TOKENS.md  README.md  README_AI_TOKENS.md  REAL_TIME_TRACKING_FIX.md  UNIVERSAL_AI_TOKEN_IMPLEMENTATION_SUMMARY.md  UNIVERSAL_AI_TOKEN_MONITORING.md  UNIVERSAL_AI_TRACKING.md  XRG_IMPROVEMENT_ROADMAP.md  check-system-status.sh  claude-otel-bridge.py  linkedin-post.md  otel-collector-config.yaml  otel-collector-xrg.yaml  start-ai-monitoring.sh  test-ai-monitoring.sh  verify-live-telemetry.sh
.claude-flow/metrics/: system-metrics.json
.swarm/: memory.db
Controllers/: XRGAppDelegate.m  XRGGraphWindow.h  XRGGraphWindow.m  XRGPrefController.h  XRGPrefController.m  XRGSensorViewController.m
Data Miners/: XRGAITokenMiner.h  XRGAITokenMiner.m
Graph Views/: XRGAITokenView.h  XRGAITokenView.m  XRGAITokensNotifications.h  XRGAITokensObserver.h  XRGBackgroundView.m  XRGBatteryView.m  XRGCPUView.m  XRGDiskView.m  XRGGPUView.m  XRGGenericView.h  XRGGenericView.m  XRGMemoryView.m  XRGNetView.m  XRGStockView.m  XRGTemperatureView.m  XRGWeatherView.m
Other Sources/: definitions.h
Resources/: XRGAIPrefController.h  XRGAIPrefController.m  XRGAISettingsKeys.h  XRGAITokensMiner.h.backup  XRGAITokensMiner.m.backup  XRGAITokensNotifications.h  XRGAITokensNotifications.m  XRGAITokensObserver.h  XRGAITokensObserver.m  XRGAITokensView.h  XRGAITokensView.m  XRGAppDelegate+AIPreferences.h  XRGAppDelegate+AIPreferences.m  XRGAppDelegate+AIWindowIntegration.h  XRGAppDelegate+AIWindowIntegration.m  XRGGraphWindow+AITokens.h  XRGGraphWindow+AITokens.m
Resources/Preferences.nib/: designable.nib  keyedobjects.nib
Utility/: XRGSettings.h  XRGSettings.m  XRGStatsManager.m  XRGStock.m  XRGURL.h  XRGURL.m
XRG.xcodeproj/: project.pbxproj  project.pbxproj.backup
xrg-linux/: .gitignore  CMakeLists.txt  PROGRESS_SUMMARY.md  README.md
xrg-linux/data/: com.gaucho.xrg-linux.desktop  xrg-linux.desktop
xrg-linux/src/: main.c  main.c.backup
xrg-linux/src/collectors/: aitoken_collector.c  aitoken_collector.h  aitoken_pricing.h  battery_collector.c  battery_collector.h  cpu_collector.c  cpu_collector.h  disk_collector.c  disk_collector.h  gpu_collector.c  gpu_collector.h  memory_collector.c  memory_collector.h  network_collector.c  network_collector.h  process_collector.c  process_collector.h  sensors_collector.c  sensors_collector.h  tpu_collector.c  tpu_collector.h
xrg-linux/src/core/: dataset.c  dataset.h  module_manager.c  module_manager.h  preferences.c  preferences.h  themes.h  utils.c  utils.h
xrg-linux/src/tests/: cli_test.c
xrg-linux/src/ui/: main_window.h  preferences_window.c  preferences_window.h
xrg-linux/src/widgets/: aitoken_widget.c  aitoken_widget.h  base_widget.c  base_widget.h  battery_widget.c  battery_widget.h  cpu_widget.c  cpu_widget.h  disk_widget.c  disk_widget.h  gpu_widget.c  gpu_widget.h  graph_widget.h  memory_widget.c  memory_widget.h  network_widget.c  network_widget.h  process_widget.c  process_widget.h  sensors_widget.c  sensors_widget.h  tpu_widget.c  tpu_widget.h
